[gd_scene load_steps=2 format=3 uid="uid://bl8bx8xg3l22t"]

[ext_resource type="Script" path="res://star_catcher.gd" id="1_rbd4g"]

[node name="StarCatcher" type="Area2D"]
script = ExtResource("1_rbd4g")

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
